Melhoras do site e adição de protótipo

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>MyPilas</title>
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -25,7 +26,7 @@
                         <li>Sem fidelidade</li>
                     </ul>
                     <footer>
-                        <a href="assine.html">Assinar</a>
+                        <a href="assine.html" class="button">Assinar</a>
                     </footer>
                 </div>
             </article>
@@ -42,7 +43,7 @@
                         <li>Sem fidelidade</li>
                     </ul>
                     <footer>
-                        <a href="assine.html">Assinar</a>
+                        <a href="assine.html" class="button">Assinar</a>
                     </footer>
                 </div>
             </article>
@@ -59,7 +60,7 @@
                         <li>Sem fidelidade</li>
                     </ul>
                     <footer>
-                        <a href="assine.html">Assinar</a>
+                        <a href="assine.html" class="button">Assinar</a>
                     </footer>
                 </div>
             </article>
