--- a/index.html
+++ b/index.html
@@ -1,70 +1,69 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+
     <title>MyPilas</title>
+
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
-        <div class="container">
-            <img src="img/logo.png" alt="MyPilas">
-        </div>
-    </header>
-    <div id="planos">
-        <div class="container">
-            <article>
-                <div class="autonomo">
-                    <h2 class="titulo">Autônomo</h2>
-                    <div class="preco">R$59/mês</div>
-                    <ul class="lista">
-                        <li>Até <strong>2 usuários</strong> por mês</li>
-                        <li><strong>500MB</strong> de armazenamento</li>
-                        <li>Lançamentos ilimitados</li>
-                        <li>Acesso seguro</li>
-                        <li>Sem fidelidade</li>
-                    </ul>
-                    <footer>
-                        <a href="assine.html" class="button">Assinar</a>
-                    </footer>
-                </div>
-            </article>
 
-            <article>
-                <div class="micro">
-                    <h2 class="titulo">Micro</h2>
-                    <div class="preco">R$89/mês</div>
-                    <ul class="lista">
-                        <li>Até <strong>6 usuários</strong> por mês</li>
-                        <li><strong>1GB</strong> de armazenamento</li>
-                        <li>Lançamentos ilimitados</li>
-                        <li>Acesso seguro</li>
-                        <li>Sem fidelidade</li>
-                    </ul>
-                    <footer>
-                        <a href="assine.html" class="button">Assinar</a>
-                    </footer>
-                </div>
-            </article>
-
-            <article>
-                <div class="pequena">
-                    <h2 class="titulo">Pequena</h2>
-                    <div class="preco">R$99/mês</div>
-                    <ul class="lista">
-                        <li>Até <strong>10 usuários</strong> por mês</li>
-                        <li><strong>5GB</strong> de armazenamento</li>
-                        <li>Lançamentos ilimitados</li>
-                        <li>Acesso seguro</li>
-                        <li>Sem fidelidade</li>
-                    </ul>
-                    <footer>
-                        <a href="assine.html" class="button">Assinar</a>
-                    </footer>
-                </div>
-            </article>
-        </div>
+<header>
+    <div class="container">
+        <img src="img/logo.png" width="100" height="35" alt="MyPilas">
     </div>
+</header>
+
+<div id="planos">
+    <div class="container">
+        <article class="autonomo">
+            <h2>Autônomo</h2>
+            <div class="preco">R$59/mês</div>
+            <ul>
+                <li>Até <strong>2 usuários</strong></li>
+                <li><strong>500MB</strong> de armazenamento</li>
+                <li>Lançamentos ilimitados</li>
+                <li>Acesso seguro</li>
+                <li>Sem fidelidade</li>
+            </ul>
+            <footer>
+                <a href="assine.html" class="button">Assinar</a>
+            </footer>
+        </article>
+
+        <article class="micro">
+            <h2>Micro</h2>
+            <div class="preco">R$89/mês</div>
+            <ul>
+                <li>Até <strong>6 usuários</strong></li>
+                <li><strong>1GB</strong> de armazenamento</li>
+                <li>Lançamentos ilimitados</li>
+                <li>Acesso seguro</li>
+                <li>Sem fidelidade</li>
+            </ul>
+            <footer>
+                <a href="assine.html" class="button">Assinar</a>
+            </footer>
+        </article>
+
+        <article style="margin-right: 0" class="pequena">
+            <h2>Pequena</h2>
+            <div class="preco">R$99/mês</div>
+            <ul>
+                <li>Até <strong>10 usuários</strong></li>
+                <li><strong>5GB</strong> de armazenamento</li>
+                <li>Lançamentos ilimitados</li>
+                <li>Acesso seguro</li>
+                <li>Sem fidelidade</li>
+            </ul>
+            <footer>
+                <a href="assine.html" class="button">Assinar</a>
+            </footer>
+        </article>
+    </div>
+</div>
+
 </body>
 </html>
