--- a/index.html
+++ b/index.html
@@ -12,68 +12,97 @@
 </head>
 <body>
 
-<header class="layout-cabecalho">
+    <header class="layout-cabecalho">
     <div class="container">
         <img src="img/logo.png" width="100" height="35" alt="MyPilas">
     </div>
-</header>
+    </header>
 
-<div id="planos" class="layout-planos">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-4">
-                <article class="plano">
-                    <h2 class="plano__cabecalho">Autônomo</h2>
-                    <div class="plano__preco">R$59/mês</div>
-                    <ul class="planos__caracteristicas">
-                        <li>Até <strong>2 usuários</strong></li>
-                        <li><strong>500MB</strong> de armazenamento</li>
-                        <li>Lançamentos ilimitados</li>
-                        <li>Acesso seguro</li>
-                        <li>Sem fidelidade</li>
-                    </ul>
-                    <footer class="plano_rodape">
-                        <a href="assine.html" class="button button--sign">Assinar</a>
-                    </footer>
-                </article>
+    <section class="layout-chamada">
+        <div class="container">
+            <div class="chamada">
+                <h1 class="chamada__titulo">As finanças da sua empresa em ordem</h1>
+                <p class="chamada__subtitulo">Software de gestão simples e prático para pequenos negócios</p>
+
+                <div class="chamada-acao">
+                    <a href="#planos" class="button button--prin">Conheça os planos</a>
+                </div>
             </div>
+        </div>
+    </section>
 
-            <div class="col-sm-4">
-                <article class="plano">
-                    <h2 class="plano__cabecalho">Micro</h2>
-                    <div class="plano__preco">R$89/mês</div>
-                    <ul class="planos__caracteristicas">
-                        <li>Até <strong>6 usuários</strong></li>
-                        <li><strong>1GB</strong> de armazenamento</li>
-                        <li>Lançamentos ilimitados</li>
-                        <li>Acesso seguro</li>
-                        <li>Sem fidelidade</li>
-                    </ul>
-                    <footer class="plano_rodape">
-                        <a href="assine.html" class="button button--sign">Assinar</a>
-                    </footer>
-                </article>
+   <div class="layout-depoimento">
+        <div class="container">
+            <div class="depoimento">
+                <blockquote>
+                    Eu tinha perdido totalmente o controle da minha empresa.
+                    Depois que comecei a usar o MyPilas, me sinto muito mais organizado e confiante no futuro.
+                </blockquote>
+
+                <div class="depoimento__autor">
+                    <img src="img/joao-da-silva.jpg" width="180" height="180" alt="João da Silva">
+                    <p>João da Silva</p>
+                </div>
             </div>
+        </div>
+   </div>
 
-            <div class="col-sm-4">
-                <article style="margin-right: 0" class="plano">
-                    <h2 class="plano__cabecalho">Pequena</h2>
-                    <div class="plano__preco">R$99/mês</div>
-                    <ul class="planos__caracteristicas">
-                        <li>Até <strong>10 usuários</strong></li>
-                        <li><strong>5GB</strong> de armazenamento</li>
-                        <li>Lançamentos ilimitados</li>
-                        <li>Acesso seguro</li>
-                        <li>Sem fidelidade</li>
-                    </ul>
-                    <footer class="plano_rodape">
-                        <a href="assine.html" class="button button--sign">Assinar</a>
-                    </footer>
-                </article>
+    <div id="planos" class="layout-planos">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-4">
+                    <article class="plano">
+                        <h2 class="plano__cabecalho">Autônomo</h2>
+                        <div class="plano__preco">R$59/mês</div>
+                        <ul class="planos__caracteristicas">
+                            <li>Até <strong>2 usuários</strong></li>
+                            <li><strong>500MB</strong> de armazenamento</li>
+                            <li>Lançamentos ilimitados</li>
+                            <li>Acesso seguro</li>
+                            <li>Sem fidelidade</li>
+                        </ul>
+                        <footer class="plano_rodape">
+                            <a href="assine.html" class="button button--sign">Assinar</a>
+                        </footer>
+                    </article>
+                </div>
+
+                <div class="col-sm-4">
+                    <article class="plano">
+                        <h2 class="plano__cabecalho">Micro</h2>
+                        <div class="plano__preco">R$89/mês</div>
+                        <ul class="planos__caracteristicas">
+                            <li>Até <strong>6 usuários</strong></li>
+                            <li><strong>1GB</strong> de armazenamento</li>
+                            <li>Lançamentos ilimitados</li>
+                            <li>Acesso seguro</li>
+                            <li>Sem fidelidade</li>
+                        </ul>
+                        <footer class="plano_rodape">
+                            <a href="assine.html" class="button button--sign">Assinar</a>
+                        </footer>
+                    </article>
+                </div>
+
+                <div class="col-sm-4">
+                    <article style="margin-right: 0" class="plano">
+                        <h2 class="plano__cabecalho">Pequena</h2>
+                        <div class="plano__preco">R$99/mês</div>
+                        <ul class="planos__caracteristicas">
+                            <li>Até <strong>10 usuários</strong></li>
+                            <li><strong>5GB</strong> de armazenamento</li>
+                            <li>Lançamentos ilimitados</li>
+                            <li>Acesso seguro</li>
+                            <li>Sem fidelidade</li>
+                        </ul>
+                        <footer class="plano_rodape">
+                            <a href="assine.html" class="button button--sign">Assinar</a>
+                        </footer>
+                    </article>
+                </div>
             </div>
         </div>
     </div>
-</div>
 
 </body>
 </html>
