--- a/index.html
+++ b/index.html
@@ -104,5 +104,74 @@
         </div>
     </div>
 
+    <footer class="layout-rodape">
+        <div class="container">
+            <div class="rodape">
+               <div class="rodape__info">
+                   <div class="row">
+                       <div class="col-sm-3">
+                           <h2 class="rodape__info__titulo">Início</h2>
+                           <div class="rodape__info__opcoes">
+                               <p>Home</p>
+                               <p>Planos</p>
+                               <p>Login</p>
+                           </div>
+                       </div>
+
+                       <div class="col-sm-3">
+                           <h2 class="rodape__info__titulo">Sobre nós</h2>
+                           <div class="rodape__info__opcoes">
+                               <p>Informações</p>
+                               <p>Nosso trabalho</p>
+                               <p>Blog</p>
+                           </div>
+                       </div>
+
+                       <div class="col-sm-3">
+                           <h2 class="rodape__info__titulo">Suporte</h2>
+                           <div class="rodape__info__opcoes">
+                               <p>FAQ</p>
+                               <p>Telefones</p>
+                               <p>Chat</p>
+                           </div>
+                       </div>
+
+                       <div class="col-sm-3">
+                           <h2 class="rodape__info__titulo">Contato</h2>
+                           <div class="rodape__info__opcoes">
+                               <h2>Fale conosco</h2><br>
+                               <p>contato@mypilas.com.br</p><br>
+                               <h2>Redes Sociais</h2><br>
+                               <div class="rodape__info__opcoes__img">
+                                   <div class="vector__facebook">
+                                       <img src="img/brandico_facebook.png" width="14" height="29">
+                                   </div>
+
+                                   <div class="vector__facebook">
+                                       <img src="img/Vector.png" width="29" height="29">
+                                   </div>
+
+                                   <div class="vector__facebook">
+                                       <img src="img/Vector%20(1).png" width="29" height="29">
+                                   </div>
+
+                                   <div class="vector__facebook">
+                                       <img src="img/Vector%20(2).png" width="29" height="29">
+                                   </div>
+                               </div>
+                           </div>
+                       </div>
+                   </div>
+               </div>
+
+            </div>
+        </div>
+
+    </footer>
+    <footer class="rodape__direitos">
+        <div class="container">
+            <p>&COPY; MyPilas. Todos os direitos reservados.</p>
+        </div>
+    </footer>
 </body>
 </html>
