--- a/index.html
+++ b/index.html
@@ -12,9 +12,15 @@
 </head>
 <body>
 
-    <header class="layout-cabecalho">
+    <header class="layout-cabecalho layout-cabecalho--home">
     <div class="container">
-        <img src="img/logo.png" width="100" height="35" alt="MyPilas">
+        <nav class="navegacao">
+            <img src="img/logo.png" width="100" height="35" alt="MyPilas">
+        </nav>
+
+        <div class="navegacao__menu">
+
+        </div>
     </div>
     </header>
 
@@ -68,7 +74,7 @@
                 </div>
 
                 <div class="col-sm-4">
-                    <article class="plano">
+                    <article class="plano plano--mais--popular">
                         <h2 class="plano__cabecalho">Micro</h2>
                         <div class="plano__preco">R$89/mês</div>
                         <ul class="planos__caracteristicas">
