--- a/index.html
+++ b/index.html
@@ -11,16 +11,33 @@
     <link rel="stylesheet" href="css/componentes.css">
 </head>
 <body>
-
     <header class="layout-cabecalho layout-cabecalho--home">
     <div class="container">
         <nav class="navegacao">
             <img src="img/logo.png" width="100" height="35" alt="MyPilas">
+
+            <div class="navegacao__menu">
+                <button class="botao--chaveador js-chaveador"></button>
+
+                <ul class="menu esta-exibindo js-menu">
+                    <li class="menu__item">
+                        <a href="#">Como funciona</a>
+                    </li>
+
+                    <li class="menu__item">
+                        <a href="#planos">Planos e preços</a>
+                    </li>
+
+                    <li class="menu__item">
+                        <a href="#">Contato</a>
+                    </li>
+
+                    <li class="menu__item menu__item-botao">
+                        <a href="#" class="button button__login">Login</a>
+                    </li>
+                </ul>
+            </div>
         </nav>
-
-        <div class="navegacao__menu">
-
-        </div>
     </div>
     </header>
 
@@ -179,5 +196,9 @@
             <p>&COPY; MyPilas. Todos os direitos reservados.</p>
         </div>
     </footer>
+
+    <script src="javascript/app.js">
+
+    </script>
 </body>
 </html>
