--- a/assine.html
+++ b/assine.html
@@ -26,8 +26,81 @@
       <form action="#" method="post">
         <h1 class="titulo--formulario">Sua assinatura do MyPilas</h1>
 
-        <label for="razao-social">Razão Social</label>
-        <input id="razao-social" type="text">
+        <div class="grupo-entrada">
+          <label for="razao-social">Razão Social</label>
+          <input id="razao-social" type="text" class="campo" required>
+        </div>
+
+        <div class="row">
+          <div class="col-sm-6">
+            <div class="grupo-entrada">
+              <label for="cnpj">CNPJ</label>
+              <input id="cnpj" type="text" class="campo" required></div>
+          </div>
+
+          <div class="col-sm-6">
+            <div class="grupo-entrada">
+              <label for="data-fundacao">Data de fundação</label>
+              <input id="data-fundacao" type="date" class="campo" required>
+            </div>
+          </div>
+        </div>
+
+        <div class="grupo-entrada">
+          <label for="responsavel">Responsável</label>
+          <input id="responsavel" type="text" class="campo" required>
+        </div>
+
+        <div class="grupo-entrada">
+          <label for="email">E-mail</label>
+          <input id="email" type="email" class="campo" required>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-6">
+            <div class="grupo-entrada">
+              <label for="estado">Estado</label>
+              <select id="estado" class="campo">
+                <option>Selecione</option>
+                <option value="MG">Minas Gerais</option>
+                <option value="SP">São Paulo</option>
+                <option value="CE">Ceará</option>
+              </select>
+            </div>
+          </div>
+
+          <div class="col-lg-6">
+            <div class="grupo-entrada">
+              <label for="cidade">Cidade</label>
+              <select id="cidade" class="campo">
+                <option>Selecione</option>
+                <option value="1">Uberlândia</option>
+                <option value="2">São Paulo</option>
+                <option value="3">Fortaleza</option>
+              </select>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-6">
+            <div class="grupo-entrada">
+              <label for="senha">Senha</label>
+              <input id="senha" type="password" class="campo" required>
+            </div>
+          </div>
+
+          <div class="col-lg-6">
+            <div class="grupo-entrada">
+              <label for="confirmar-senha">Confirme a senha</label>
+              <input id="confirmar-senha" type="password" class="campo" required>
+            </div>
+          </div>
+        </div>
+
+        <div style="text-align: center; margin-top: 15px">
+          <input type="submit" value="Assinar MyPilas" class="button button--prin">
+        </div>
 
       </form>
     </div>
