--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     </li>
 
                     <li class="menu__item menu__item-botao">
-                        <a href="#" class="button button__login">Login</a>
+                        <a href="login.html" class="button button__login">Login</a>
                     </li>
                 </ul>
             </div>
