--- a/login.html
+++ b/login.html
@@ -9,13 +9,13 @@
     <link rel="stylesheet" href="css/layout.css">
     <link rel="stylesheet" href="css/componentes.css">
 </head>
-<body>
+<body class="body-login">
     <div class="layout-login">
         <div class="container">
             <div class="row">
                 <div class="col-sm-7">
+                    <div class="login__background"></div>
                 </div>
-
                 <div class="col-sm-5">
                     <div class="login__info">
                         <h1 class="login__info__titulo">Login</h1>
@@ -41,11 +41,34 @@
                             </label>
                         </div>
 
+                        <div class="forgot-password">
+                            <a href="senha.html">Esqueceu a senha?</a>
+                        </div>
+
                         <div style="text-align: center; margin-top: 15px">
                             <a href="index.html">
                                 <input type="submit" value="Login" class="button button--prin button--login">
                             </a>
                         </div>
+
+                        <div class="login-conectar">ou conecte-se usando</div>
+
+                        <div class="redes-sociais">
+                            <div class="vector__rede">
+                                <a href=""></a>
+                                <img src="img/logos_facebook.png">
+                            </div>
+
+                            <div class="vector__rede">
+                                <img src="img/logos_twitter.png">
+                            </div>
+
+                            <div class="vector__rede">
+                                <img src="img/flat-color-icons_google.png">
+                            </div>
+
+                        </div>
+
                     </div>
                 </div>
 
